feat: authenticate with sanctum method and handle response api exception
