# routes/admin/api/v1/api.php
@@ -1,0 +1,9 @@
+<?php
+
+use Illuminate\Support\Facades\Route;
+
+Route::group([
+    'prefix' => '/authentication',
+], function () {
+    Route::prefix('')->name('authentication.')->group(__DIR__ . '/auth.php');
+});
